--- a/FreeFlix/css/home.css
+++ b/FreeFlix/css/home.css
@@ -34,10 +34,10 @@
     .row h2 {
       margin-bottom: 10px;
     }
-   .website-logo {
-  width: 200px; /* Or any desired width */
-  height: auto; /* Maintain aspect ratio */
-  max-width: 100%; /* Prevent it from overflowing the container */
+   #logo img {
+    height: 80px;
+    max-height: 80px;
+    width: auto;
 }
     .list {
       display: flex;
