--- a/FreeFlix/movie_details/movie_details.css
+++ b/FreeFlix/movie_details/movie_details.css
@@ -107,6 +107,24 @@ p {
   height: auto;
 }
 
+/* Add this to your CSS file */
+
+/* Mobile styles */
+@media only screen and (max-width: 768px) {
+    iframe {
+        width: 90%;
+        height: 150px;
+    }
+}
+
+/* Tablet and desktop styles */
+@media only screen and (min-width: 769px) {
+    iframe {
+        width: 80%;
+        height: 200px;
+    }
+}
+
 /* Server selector dropdown styles */
 #server-selector {
   position: absolute;
