--- a/FreeFlix/movie_details/movie_details.css
+++ b/FreeFlix/movie_details/movie_details.css
@@ -52,6 +52,25 @@ iframe {
     height: 100%;
 }
 
+/* Add this to your CSS file */
+
+/* Add margin space to the iframe */
+iframe {
+    margin-right: 20px; /* Add a 20px margin to the right of the iframe */
+    margin-bottom: 20px; /* Add a 20px margin to the bottom of the iframe */
+}
+
+/* Add margin space to the text elements */
+.movie-info {
+    margin-left: 20px; /* Add a 20px margin to the left of the text elements */
+    margin-right: 20px; /* Add a 20px margin to the right of the text elements */
+}
+
+/* Add margin space to the plot element */
+#plot {
+    margin-bottom: 20px; /* Add a 20px margin to the bottom of the plot element */
+}
+
 /* Movie information section */
 .movie-info {
     width: 40%;
