--- a/FreeFlix/index.css
+++ b/FreeFlix/index.css
@@ -34,7 +34,7 @@ body {
   margin: 15px 3.5% 15px 0px;
   padding: 5px 15px;
   font-size: 24px;
-  color: rgb(0, 0, 0, 0.8);
+  color: rgb(255, 255, 255);
   border: 1px solid transparent;
   border-radius: 6px;
   background-color: rgb(141, 22, 201);
