--- a/FreeFlix/index.css
+++ b/FreeFlix/index.css
@@ -221,7 +221,7 @@ input::-webkit-input-placeholder {
 
 #play-button {
   background-color: #8d16c9;
-  color: #000;
+  color: #ffffff;
   padding: 7px 25px;
 }
 
