--- a/FreeFlix/movie_details/movie_details.css
+++ b/FreeFlix/movie_details/movie_details.css
@@ -15,8 +15,8 @@ h1 {
     width: 100vw;
     height: 70px;
     display: flex;
-    align-items: left;
-    justify-content: center;
+    align-items: center;
+    justify-content: left;
 }
 
 /* Logo styling */
