--- a/FreeFlix/index.css
+++ b/FreeFlix/index.css
@@ -195,7 +195,7 @@ input::-webkit-input-placeholder {
 
 #banner-title {
   margin: 0;
-  color: white;
+  color: #4f026f;
   font-size: 48px;
   font-weight: 800;
 }
