--- a/FreeFlix/index.css
+++ b/FreeFlix/index.css
@@ -55,6 +55,16 @@ body {
   box-sizing: border-box;
 }
 
+#banner-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, rgba(0,0,0,0.8) 10%, rgba(0,0,0,0.4) 40%, transparent 80%);
+  z-index: 1;
+}
+
 /* input styles */
 input {
   width: 100%;
