--- a/FreeFlix/movie_details/movie_details.css
+++ b/FreeFlix/movie_details/movie_details.css
@@ -169,7 +169,7 @@ iframe {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #810c7d;
-  color: #fff;
+  color: #c5fad5;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
