--- a/FreeFlix/movie_details/movie_details.css
+++ b/FreeFlix/movie_details/movie_details.css
@@ -169,7 +169,7 @@ iframe {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #810c7d;
-  color: #c5fad5;
+  color: #fff;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -208,7 +208,7 @@ iframe {
   top: 100%;
   left: 0;
   background-color: #41013f;
-  color: #c5fad5;
+  color: #fff;
   padding: 10px;
   border: 1px solid #41013f;
   border-radius: 5px;
@@ -225,7 +225,7 @@ iframe {
   padding: 10px;
   font-size: 14px;
   background-color: #41013f;
-  color: #c5fad5;
+  color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -244,7 +244,7 @@ iframe {
   padding: 10px;
   font-size: 14px;
   background-color: #30012f;
-  color: #c5fad5;
+  color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
