--- a/FreeFlix/index.css
+++ b/FreeFlix/index.css
@@ -19,6 +19,13 @@ body {
   top: 0;
   z-index: 2;
   transition: top 0.4s; /* Smooth transition for hiding/showing the header */
+  /* Add the following style to apply a blur effect */
+    filter: blur(5px); /* Adjust the blur value as needed */
+    -webkit-filter: blur(5px); /* For Safari and Chrome */
+    -moz-filter: blur(5px); /* For Firefox */
+    -ms-filter: blur(5px); /* For Internet Explorer */
+    backdrop-filter: blur(5px); /* For modern browsers */
+    padding: 1rem;
 }
 /* Logo styles */
 #netflix-logo {
