--- a/FreeFlix/movie_details/movie_details.css
+++ b/FreeFlix/movie_details/movie_details.css
@@ -176,6 +176,22 @@ iframe {
   display: none; /* Initially hidden */
 }
 
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.close-button:hover {
+    background-color: #41013f;
+}
+
 .server-selector-header {
   background-color: #540151;
   padding: 10px;
