--- a/FreeFlix/movie_details/movie_details.css
+++ b/FreeFlix/movie_details/movie_details.css
@@ -62,10 +62,11 @@ h1 {
 /* iframe sizing */
 iframe {
     width: 100%;
-    height: 350px !important;
+    height: 450px !important;
     margin: 0 0 20px 0;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    border: none; /* Remove border to make it cleaner */
 }
 
 #moviePoster {
@@ -669,10 +670,11 @@ p {
 
 /* Iframe to display video */
 #iframe {
-  width: 100%;
-  height: 350px !important;
-  display: block;
-  margin-bottom: 10px;
+    width: 100%;
+    height: 450px !important;
+    display: block;
+    margin-bottom: 10px;
+    border: none; /* Remove border to make it cleaner */
 }
 
 /* Styling for the change server dropdown */
@@ -702,7 +704,7 @@ p {
 
     #iframe,
     iframe {
-        height: 220px !important;
+        height: 240px !important;
         width: 100%;
         margin: 0 auto 20px auto;
     }
@@ -785,7 +787,7 @@ p {
 
     #iframe,
     iframe {
-        height: 280px !important;
+        height: 320px !important;
         margin: 0;
         width: 95%;
         margin: 0 auto 20px auto;
@@ -837,7 +839,7 @@ p {
 
     #iframe,
     iframe {
-        height: 300px !important;
+        height: 380px !important;
         margin: 0;
         width: 95%;
         margin: 0 auto 20px auto;
@@ -879,7 +881,7 @@ p {
 
     #iframe,
     iframe {
-        height: 280px !important;
+        height: 350px !important;
     }
 
     .movie-info {
@@ -910,7 +912,7 @@ p {
 
     #iframe,
     iframe {
-        height: 300px !important;
+        height: 380px !important;
     }
 
     .movie-info {
@@ -955,7 +957,7 @@ p {
 
     #iframe,
     iframe {
-        height: 320px !important;
+        height: 420px !important;
     }
 
     .movie-info {
@@ -982,7 +984,7 @@ p {
 @media screen and (min-width: 1301px) {
     #iframe,
     iframe {
-        height: 350px !important;
+        height: 450px !important;
     }
     .server-dropdown,
     .watchListBtn {
