--- a/FreeFlix/index.css
+++ b/FreeFlix/index.css
@@ -663,6 +663,15 @@ input::-webkit-input-placeholder {
     font-weight: 700;
     letter-spacing: 0.5px;
   }
+
+  /* Restore Netflix Originals poster size on mobile */
+  .netflix-container .movie-item {
+    width: 250px;
+    height: 340px;
+  }
+  .netflix-previous, .netflix-next {
+    height: 340px;
+  }
 }
 
 .image-wrapper:hover .movie-overlay {
@@ -1140,6 +1149,26 @@ input::-webkit-input-placeholder {
   .movies-box::-webkit-scrollbar {
     display: none;
     height: 0;
+  }
+
+  /* Restore Netflix Originals poster size on mobile */
+  .netflix-container .movie-item {
+    width: 250px;
+    height: 340px;
+  }
+  .netflix-previous, .netflix-next {
+    height: 340px;
+  }
+}
+
+/* Custom smaller Netflix Originals on mobile */
+@media only screen and (max-width: 560px) {
+  .netflix-container .movie-item {
+    width: 180px;
+    height: 260px;
+  }
+  .netflix-previous, .netflix-next {
+    height: 260px;
   }
 }
 
